--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -35,6 +35,13 @@ li > a:hover, li > a:active, .navbar-brand:hover, .navbar-brand:active {
 	font-size:large;
 }
 
+.btn-info {	
+	background-color: #6fa2f2 !important;
+	border-color: #6fa2f2 !important;
+	color: white;
+	font-size:large;
+}
+
 .open > a, .dropdown-menu {
     background-color: #36626a !important;
 }
@@ -77,7 +84,20 @@ footer {
 	font:bold 1.5em "arial";
 }
 
+.container-blanco-solido {
+	background-color: white !important;
+    padding: 1em;
+}
 
+.letra-mantenimiento {
+	padding-top: 8em;
+	font-size: 4em !important;
+	color: white;
+}
+
+.titulo-seccion-ayuda {
+	font:bold 1.5em "arial";
+}
 
 /*#navbar {
 	background-color: #36626a !important;
