--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,159 +1,1 @@
-/* Para referirse a los componentes hay tres formas: si es un componente html simple se escribe su nombre directamente (ej. body);
-si es una clase se escribe un punto y luego el nombre de la clase (ej. .jumbotron); y si es un id, se escribe un numeral y luego el id
-(ej. #navbar) */
-
-/* Estilos de Verano */
-body {
-    background-image: url('../images/wood_pattern.png');
-}
-
-/* Azules: #0b88a8 #19a3c6 */
-/* Verdes: #147a4d #afc464 */
-
-#navbar {
-	background-color: #0b88a8 !important;
-}
-
-li > a:link, li > a:visited, .navbar-brand:visited, .navbar-brand:link, .disabled{
-	font-size:large;
-	color: #e5e5e5 !important;
-}
-
-li > a:hover, li > a:active, .navbar-brand:hover, .navbar-brand:active {
-	color: black !important;
-}
-
-.btn {
-	margin: 2px;
-}
-
-.btn-primary, .active {
-	background-color: #0b88a8 !important;
-	border-color: #0b88a8 !important;
-	color: white;
-	font-size:large;
-}
-
-.btn-info {	
-	background-color: #6fa2f2 !important;
-	border-color: #6fa2f2 !important;
-	color: white;
-	font-size:large;
-}
-
-.btn-danger {
-	background-color: #ff0000 !important;
-	border-color: #ff0000 !important;	
-}
-
-.btn-comoVoy {
-	border-radius: 35px;
-	margin: 2px;
-}
-
-.btn-home {
-	padding-top: 0.75em;
-	width:4.5em;
-  	height:4.5em;
-	border-radius: 4em;
-	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-}
-
-.btn-sm {
-	padding: 0px 1em 0px 1em;
-	font-size: 1em;
-}
-
-.btn-show-revisita {
-	background-color: #0b88a8 !important;
-	border-color: #0b88a8 !important;
-	color: white;
-}
-
-footer {
-	color: #707070;
-}
-
-.rgba {
-   background-color:rgba(255,255,255,0.4);
-   padding: 1em;
-}
-
-.bg-celeste-eldir {
-	background-color: #0b88a8;
-	margin-bottom: 1em;
-}
-
-.aVersion {
-	font:bold 14px "arial";
-}
-
-.contenidoNota {
-	background-color: white !important;
-    padding: 1em;
-    font:normal 2em "arial";
-}
-
-#collapseHome {
-	font-size: 1.5em;
-}
-
-.text-home {
-	font:bold 1.5em "arial";
-}
-
-.container-blanco-solido {
-	background-color: white !important;
-    padding: 1em;
-}
-
-.letra-mantenimiento {
-	padding-top: 8em;
-	font-size: 4em !important;
-	color: white;
-}
-
-.titulo-seccion-ayuda {
-	font:bold 1.5em "arial";
-}
-
-.link-persona-index {
-	color: white;
-	text-decoration: none !important;
-}
-
-.link-persona-index:hover {
-	color: black;
-}
-
-.panel-default {
-	border-radius: 4px;
-	background-color: #fffdf4;
-}
-
-.panel-heading {
-	border-radius: 4px 4px 0px 0px;
-	padding: 1em;
-    background-color: #19a3c6 !important;
-    color: white !important;
-}
-
-.panel-body {
-	padding: 1em;
-}
-
-.panel-collapse {
-	padding-top: 1em;
-}
-
-.a-home-mejoras {
-	color: #307af2;
-}
-
-.a-home-mejoras:hover {
-	color: black;
-}
-
-.li-indice {
-	color: black !important;
-}
+#navbar,.active,.btn-primary{background-color:#0b88a8!important}body{background-image:url(../images/wood_pattern.png)}.disabled,.navbar-brand:link,.navbar-brand:visited,li>a:link,li>a:visited{font-size:large;color:#e5e5e5!important}.navbar-brand:active,.navbar-brand:hover,li>a:active,li>a:hover{color:#000!important}.btn{margin:2px}.active,.btn-primary{border-color:#0b88a8!important;color:#fff;font-size:large}.btn-info{background-color:#6fa2f2!important;border-color:#6fa2f2!important;color:#fff;font-size:large}.btn-danger{background-color:red!important;border-color:red!important}.btn-comoVoy{border-radius:35px;margin:2px}.btn-home{padding-top:.75em;width:4.5em;height:4.5em;border-radius:4em;box-shadow:0 8px 16px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19)}.btn-sm{padding:0 1em;font-size:1em}.btn-show-revisita{background-color:#0b88a8!important;border-color:#0b88a8!important;color:#fff}footer{color:#707070}.rgba{background-color:rgba(255,255,255,.4);padding:1em}.bg-celeste-eldir{background-color:#0b88a8;margin-bottom:1em}.container-blanco-solido,.contenidoNota{background-color:#fff!important;padding:1em}.aVersion{font:700 14px arial}.contenidoNota{font:400 2em arial}#collapseHome{font-size:1.5em}.text-home{font:700 1.5em arial}.letra-mantenimiento{padding-top:8em;font-size:4em!important;color:#fff}.titulo-seccion-ayuda{font:700 1.5em arial}.link-persona-index{color:#fff;text-decoration:none!important}.link-persona-index:hover{color:#000}.panel-default{border-radius:4px;background-color:#fffdf4}.panel-heading{border-radius:4px 4px 0 0;padding:1em;background-color:#19a3c6!important;color:#fff!important}.panel-body{padding:1em}.panel-collapse{padding-top:1em}.a-home-mejoras{color:#307af2}.a-home-mejoras:hover{color:#000}ul>li>.a-indice{color:#000!important;text-decoration:none}ul>li>.a-indice:hover{color:#0b88a8!important}
